# Vals-Take-Home

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
agents/configs/: mini-swe-agent.json
benchmarks/bash-operations/: README.md  dataset.json  evaluate.py  harness.json  setup.py
benchmarks/python-tasks/: README.md  dataset.json  grade.py  harness.json  prepare.py
docker/: benchmark.Dockerfile
examples/: run_bash_example.sh  run_python_example.sh
src/agentic_harness/: __init__.py  cli.py  db.py  runner.py  worker.py
