[project]
name = "agentic-harness"
version = "0.1.0"
description = "Run any benchmark against any agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
]

[project.scripts]
harness = "agentic_harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
